# swarm

./: .gitignore  CMakeLists.txt
include/: agent.h  connection.h  environment.h  model.h
src/: agent.cpp  main.cpp
